--- a/templates/products.html
+++ b/templates/products.html
@@ -9,17 +9,15 @@ Home
 <!-- my-4 is margin on y-axis -->
 <!-- px-0 is padding on x-axis -->
 <div class="container my-3">
-    <h1 class="my-4 text-center"> Select from our range of ice creams </h1>
+    <h1 class="my-4 text-center"> Select from our range of products </h1>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
             <div class="card shadow-sm">
-                <img src="https://source.unsplash.com/1200x900/?icecream" class="bd-placeholder-img card-img-top"
+                <img src="/dailyharbour/static/Images/Headphone.jpg" class="bd-placeholder-img card-img-top"
                     width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
                     aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <div class="card-body">
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional
-                        content. This content is a little bit longer.</p>
+                    <p class="card-text">Headphones</p>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -32,13 +30,11 @@ Home
         </div>
         <div class="col">
             <div class="card shadow-sm">
-                <img src="https://source.unsplash.com/1200x900/?icecream" class="bd-placeholder-img card-img-top"
+                <img src="/dailyharbour/static/Images/Charger.jpg" class="bd-placeholder-img card-img-top"
                     width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
                     aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <div class="card-body">
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional
-                        content. This content is a little bit longer.</p>
+                    <p class="card-text">Charger</p>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -51,71 +47,11 @@ Home
         </div>
         <div class="col">
             <div class="card shadow-sm">
-                <img src="https://source.unsplash.com/1200x900/?icecream" class="bd-placeholder-img card-img-top"
+                <img src="/dailyharbour/static/Images/Potatoes.jpg" class="bd-placeholder-img card-img-top"
                     width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
                     aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <div class="card-body">
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional
-                        content. This content is a little bit longer.</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                        </div>
-                        <small class="text-body-secondary">9 mins</small>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col">
-            <div class="card shadow-sm">
-                <img src="https://source.unsplash.com/1200x900/?icecream" class="bd-placeholder-img card-img-top"
-                    width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
-                    aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <div class="card-body">
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional
-                        content. This content is a little bit longer.</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                        </div>
-                        <small class="text-body-secondary">9 mins</small>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card shadow-sm">
-                <img src="https://source.unsplash.com/1200x900/?icecream" class="bd-placeholder-img card-img-top"
-                    width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
-                    aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <div class="card-body">
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional
-                        content. This content is a little bit longer.</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                        </div>
-                        <small class="text-body-secondary">9 mins</small>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card shadow-sm">
-                <img src="https://source.unsplash.com/1200x900/?icecream" class="bd-placeholder-img card-img-top"
-                    width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
-                    aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <div class="card-body">
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional
-                        content. This content is a little bit longer.</p>
+                    <p class="card-text">Potatoes</p>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -129,13 +65,11 @@ Home
 
         <div class="col">
             <div class="card shadow-sm">
-                <img src="https://source.unsplash.com/1200x900/?icecream" class="bd-placeholder-img card-img-top"
+                <img src="/dailyharbour/static/Images/Soap.jpg" class="bd-placeholder-img card-img-top"
                     width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
                     aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <div class="card-body">
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional
-                        content. This content is a little bit longer.</p>
+                    <p class="card-text">Soap</p>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -148,13 +82,11 @@ Home
         </div>
         <div class="col">
             <div class="card shadow-sm">
-                <img src="https://source.unsplash.com/1200x900/?icecream" class="bd-placeholder-img card-img-top"
+                <img src="/dailyharbour/static/Images/Spinach.jpg" class="bd-placeholder-img card-img-top"
                     width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
                     aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <div class="card-body">
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional
-                        content. This content is a little bit longer.</p>
+                    <p class="card-text">Spinach</p>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -167,13 +99,63 @@ Home
         </div>
         <div class="col">
             <div class="card shadow-sm">
-                <img src="https://source.unsplash.com/1200x900/?icecream" class="bd-placeholder-img card-img-top"
+                <img src="/dailyharbour/static/Images/MedicalKit.jpg" class="bd-placeholder-img card-img-top"
                     width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
                     aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <div class="card-body">
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional
-                        content. This content is a little bit longer.</p>
+                    <p class="card-text">Medical Kit</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                        </div>
+                        <small class="text-body-secondary">9 mins</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card shadow-sm">
+                <img src="/dailyharbour/static/Images/Watch.jpg" class="bd-placeholder-img card-img-top"
+                    width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
+                    aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <div class="card-body">
+                    <p class="card-text">Watch</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                        </div>
+                        <small class="text-body-secondary">9 mins</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card shadow-sm">
+                <img src="/dailyharbour/static/Images/Chanel.jpg" class="bd-placeholder-img card-img-top"
+                    width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
+                    aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <div class="card-body">
+                    <p class="card-text">Chanel</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                        </div>
+                        <small class="text-body-secondary">9 mins</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card shadow-sm">
+                <img src="/dailyharbour/static/Images/ToothBrush.jpg" class="bd-placeholder-img card-img-top"
+                    width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
+                    aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <div class="card-body">
+                    <p class="card-text">Toothbrush</p>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
