--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -12,24 +12,22 @@ Homepage
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/static/img/photo-1474533883693-59a44dbb964e.jpg" class="d-block w-100" alt="...">
+                <img src="https://source.unsplash.com/1200x400/?order" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Wlcome to the best ice cream of rampur</h5>
-                    <p>I know you eat ice creams but I also know that you havent eaten my ice creams</p>
+                    <h5>Welcome to Daily Harbour, your one-stop destination for all your daily needs! </h5>
+                    <p>Explore our wide range of fresh fruits, vegetables, essential electronics, all delivered right to your doorstep</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/static/img/photo-1593182440754-5e47a6ea4917.jpg" class="d-block w-100" alt="...">
+                <img src="https://source.unsplash.com/1200x400/?vegetables" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Wlcome to the best ice cream of rampur</h5>
-                    <p>I know you eat ice creams but I also know that you havent eaten mine</p>
+                    <h5>Discover the freshest fruits and vegetables sourced directly from local farms, ensuring quality and taste with every bite. From the latest electronics to everyday medical essentials, we have everything you need to make life easier and healthier.</h5>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/static/img/photo-1594645948603-d05d834ed69f.jpg" class="d-block w-100" alt="...">
+                <img src="https://source.unsplash.com/1200x400/?quality" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Wlcome to the best ice cream of rampur</h5>
-                    <p>I know you eat ice creams but I also know that you havent eaten mine</p>
+                    <h5>At Daily Harbour, we prioritize quality and freshness above all else. Our team meticulously selects each item to guarantee the highest standards, so you can shop with confidence knowing you're getting the best products every time.</h5>
                 </div>
             </div>
         </div>
