--- a/templates/products.html
+++ b/templates/products.html
@@ -21,7 +21,8 @@ Home
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">+</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">-</button>
                         </div>
                         <small class="text-body-secondary">9 mins</small>
                     </div>
@@ -38,7 +39,8 @@ Home
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">+</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">-</button>
                         </div>
                         <small class="text-body-secondary">9 mins</small>
                     </div>
@@ -55,7 +57,8 @@ Home
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">+</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">-</button>
                         </div>
                         <small class="text-body-secondary">9 mins</small>
                     </div>
@@ -73,7 +76,8 @@ Home
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">+</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">-</button>
                         </div>
                         <small class="text-body-secondary">9 mins</small>
                     </div>
@@ -90,7 +94,8 @@ Home
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">+</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">-</button>
                         </div>
                         <small class="text-body-secondary">9 mins</small>
                     </div>
@@ -107,7 +112,8 @@ Home
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">+</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">-</button>
                         </div>
                         <small class="text-body-secondary">9 mins</small>
                     </div>
@@ -125,7 +131,8 @@ Home
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">+</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">-</button>
                         </div>
                         <small class="text-body-secondary">9 mins</small>
                     </div>
@@ -142,7 +149,8 @@ Home
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">+</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">-</button>
                         </div>
                         <small class="text-body-secondary">9 mins</small>
                     </div>
@@ -159,7 +167,8 @@ Home
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">+</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">-</button>
                         </div>
                         <small class="text-body-secondary">9 mins</small>
                     </div>
