--- a/templates/products.html
+++ b/templates/products.html
@@ -24,7 +24,7 @@ Home
                             <button type="button" class="btn btn-sm btn-outline-secondary">+</button>
                             <button type="button" class="btn btn-sm btn-outline-secondary">-</button>
                         </div>
-                        <small class="text-body-secondary">9 mins</small>
+                        <small class="text-body-secondary">₹ 1000</small>
                     </div>
                 </div>
             </div>
@@ -42,7 +42,7 @@ Home
                             <button type="button" class="btn btn-sm btn-outline-secondary">+</button>
                             <button type="button" class="btn btn-sm btn-outline-secondary">-</button>
                         </div>
-                        <small class="text-body-secondary">9 mins</small>
+                        <small class="text-body-secondary">₹ 1000</small>
                     </div>
                 </div>
             </div>
@@ -60,7 +60,7 @@ Home
                             <button type="button" class="btn btn-sm btn-outline-secondary">+</button>
                             <button type="button" class="btn btn-sm btn-outline-secondary">-</button>
                         </div>
-                        <small class="text-body-secondary">9 mins</small>
+                        <small class="text-body-secondary">₹ 1000</small>
                     </div>
                 </div>
             </div>
@@ -79,7 +79,7 @@ Home
                             <button type="button" class="btn btn-sm btn-outline-secondary">+</button>
                             <button type="button" class="btn btn-sm btn-outline-secondary">-</button>
                         </div>
-                        <small class="text-body-secondary">9 mins</small>
+                        <small class="text-body-secondary">₹ 1000</small>
                     </div>
                 </div>
             </div>
@@ -97,7 +97,7 @@ Home
                             <button type="button" class="btn btn-sm btn-outline-secondary">+</button>
                             <button type="button" class="btn btn-sm btn-outline-secondary">-</button>
                         </div>
-                        <small class="text-body-secondary">9 mins</small>
+                        <small class="text-body-secondary">₹ 1000</small>
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@ Home
                             <button type="button" class="btn btn-sm btn-outline-secondary">+</button>
                             <button type="button" class="btn btn-sm btn-outline-secondary">-</button>
                         </div>
-                        <small class="text-body-secondary">9 mins</small>
+                        <small class="text-body-secondary">₹ 1000</small>
                     </div>
                 </div>
             </div>
@@ -134,7 +134,7 @@ Home
                             <button type="button" class="btn btn-sm btn-outline-secondary">+</button>
                             <button type="button" class="btn btn-sm btn-outline-secondary">-</button>
                         </div>
-                        <small class="text-body-secondary">9 mins</small>
+                        <small class="text-body-secondary">₹ 1000</small>
                     </div>
                 </div>
             </div>
@@ -152,7 +152,7 @@ Home
                             <button type="button" class="btn btn-sm btn-outline-secondary">+</button>
                             <button type="button" class="btn btn-sm btn-outline-secondary">-</button>
                         </div>
-                        <small class="text-body-secondary">9 mins</small>
+                        <small class="text-body-secondary">₹ 1000</small>
                     </div>
                 </div>
             </div>
@@ -170,7 +170,7 @@ Home
                             <button type="button" class="btn btn-sm btn-outline-secondary">+</button>
                             <button type="button" class="btn btn-sm btn-outline-secondary">-</button>
                         </div>
-                        <small class="text-body-secondary">9 mins</small>
+                        <small class="text-body-secondary">₹ 1000</small>
                     </div>
                 </div>
             </div>
