--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/about">View Cart</a>
+                        <a class="nav-link" href="/about">Checkout</a>
                     </li>
 
                     <li class="nav-item">
