--- a/templates/products.html
+++ b/templates/products.html
@@ -13,7 +13,7 @@ Home
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
             <div class="card shadow-sm">
-                <img src="/dailyharbour/static/Images/Headphone.jpg" class="bd-placeholder-img card-img-top"
+                <img src="https://source.unsplash.com/1200x400/?headphones" class="bd-placeholder-img card-img-top"
                     width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
                     aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <div class="card-body">
