--- a/templates/products.html
+++ b/templates/products.html
@@ -31,7 +31,7 @@ Home
         </div>
         <div class="col">
             <div class="card shadow-sm">
-                <img src="/dailyharbour/static/Images/Charger.jpg" class="bd-placeholder-img card-img-top"
+                <img src="https://source.unsplash.com/1400x600/?charger" class="bd-placeholder-img card-img-top"
                     width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
                     aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <div class="card-body">
@@ -49,7 +49,7 @@ Home
         </div>
         <div class="col">
             <div class="card shadow-sm">
-                <img src="/dailyharbour/static/Images/Potatoes.jpg" class="bd-placeholder-img card-img-top"
+                <img src="https://source.unsplash.com/1400x600/?potatoes" class="bd-placeholder-img card-img-top"
                     width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
                     aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <div class="card-body">
@@ -68,7 +68,7 @@ Home
 
         <div class="col">
             <div class="card shadow-sm">
-                <img src="/dailyharbour/static/Images/Soap.jpg" class="bd-placeholder-img card-img-top"
+                <img src="https://source.unsplash.com/1400x600/?soap" class="bd-placeholder-img card-img-top"
                     width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
                     aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <div class="card-body">
@@ -86,7 +86,7 @@ Home
         </div>
         <div class="col">
             <div class="card shadow-sm">
-                <img src="/dailyharbour/static/Images/Spinach.jpg" class="bd-placeholder-img card-img-top"
+                <img src="https://source.unsplash.com/1400x600/?spinach" class="bd-placeholder-img card-img-top"
                     width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
                     aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <div class="card-body">
@@ -104,7 +104,7 @@ Home
         </div>
         <div class="col">
             <div class="card shadow-sm">
-                <img src="/dailyharbour/static/Images/MedicalKit.jpg" class="bd-placeholder-img card-img-top"
+                <img src="https://source.unsplash.com/1400x600/?medicine" class="bd-placeholder-img card-img-top"
                     width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
                     aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <div class="card-body">
@@ -123,7 +123,7 @@ Home
 
         <div class="col">
             <div class="card shadow-sm">
-                <img src="/dailyharbour/static/Images/Watch.jpg" class="bd-placeholder-img card-img-top"
+                <img src="https://source.unsplash.com/1400x600/?watch" class="bd-placeholder-img card-img-top"
                     width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
                     aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <div class="card-body">
@@ -141,7 +141,7 @@ Home
         </div>
         <div class="col">
             <div class="card shadow-sm">
-                <img src="/dailyharbour/static/Images/Chanel.jpg" class="bd-placeholder-img card-img-top"
+                <img src="https://source.unsplash.com/1400x600/?perfume" class="bd-placeholder-img card-img-top"
                     width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
                     aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <div class="card-body">
@@ -159,7 +159,7 @@ Home
         </div>
         <div class="col">
             <div class="card shadow-sm">
-                <img src="/dailyharbour/static/Images/ToothBrush.jpg" class="bd-placeholder-img card-img-top"
+                <img src="https://source.unsplash.com/1400x600/?toothbrush" class="bd-placeholder-img card-img-top"
                     width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
                     aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <div class="card-body">
