updated order placed page

--- a/templates/orderPlaced.html
+++ b/templates/orderPlaced.html
@@ -45,7 +45,7 @@
         <h1>Thank You for Your Order!</h1>
         <p>Your order has been successfully placed.</p>
         <p>We appreciate your business and hope you enjoy your purchase.</p>
-        <p>For any inquiries or issues, please <a href="contact.html">contact us</a>.</p>
+        <p>For any inquiries or issues, please mail at "dailyHarbour@gmail.com".</p>
         <a href="index.html" class="btn">Continue Shopping</a>
     </div>
 </body>
