--- a/templates/base.html
+++ b/templates/base.html
@@ -7,11 +7,9 @@
     <title> {% block title %} {% endblock title %} | Daily Harbour </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
-    {% block styles %} {% endblock styles %}
 </head>
 
-<body class = "bg-body-tertiary">
+<body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Daily Harbour</a>
@@ -27,15 +25,11 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/about">Products</a>
+                        <a class="nav-link" href="/products">Products</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/about">Checkout</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about">Login</a>
+                        <a class="nav-link" href="/cart">View Cart</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
