--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/homepage">Home</a>
                     </li>
 
                     <li class="nav-item">
@@ -29,7 +29,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/cart">View Cart</a>
+                        <a class="nav-link" href="/checkout">Checkout</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
