--- a/templates/base.html
+++ b/templates/base.html
@@ -25,15 +25,11 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/about">Products</a>
+                        <a class="nav-link" href="/products">Products</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/about">View Cart</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about">Login</a>
+                        <a class="nav-link" href="/checkout">Checkout</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
