--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -390,8 +390,7 @@ Checkout
                     </div>
 
                     <hr class="my-4">
-
-                    <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button>
+                    <a href="/homepage" class="btn btn-primary btn-lg w-100">Continue to checkout</a>
                 </form>
             </div>
         </div>
