--- a/templates/orderPlaced.html
+++ b/templates/orderPlaced.html
@@ -46,7 +46,7 @@
         <p>Your order has been successfully placed.</p>
         <p>We appreciate your business and hope you enjoy your purchase.</p>
         <p>For any inquiries or issues, please mail at "dailyHarbour@gmail.com".</p>
-        <a href="index.html" class="btn">Continue Shopping</a>
+        <a href="/homepage" class="btn">Continue Shopping</a>
     </div>
 </body>
 </html>
