frontend pakka se done

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -390,7 +390,7 @@ Checkout
                     </div>
 
                     <hr class="my-4">
-                    <a href="/homepage" class="btn btn-primary btn-lg w-100">Continue to checkout</a>
+                    <a href="/orderPlaced" class="btn btn-primary btn-lg w-100">Continue to checkout</a>
                 </form>
             </div>
         </div>
