--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,9 @@
     <title> {% block title %} {% endblock title %} | Daily Harbour </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+        {% block styles %}
+        {% endblock styles %}
 </head>
 
 <body>
