Added inline css to the add to cart button

--- a/templates/products.html
+++ b/templates/products.html
@@ -226,10 +226,12 @@
     </div>
 </div>
 
-<!-- fix alignment -->
-<button id="addToCartBtn" class="btn btn-primary" onClick="addToCart()">
-    Add to Cart
-</button>
+<div class="container" style="text-align: center;">
+    <button id="addToCartBtn" class="btn btn-primary" onClick="addToCart()">
+        Add to Cart
+    </button>
+</div>
+
 
 <script>
     // Get all product elements
