Made Changes to products background and changed Image in Carousel

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,7 +9,7 @@ Homepage
     <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active" style="height: 647px;">
-                <img src="https://source.unsplash.com/1200x647/?order" class="d-block w-100" style="object-fit: cover; width: 100%; height: 100%;" alt="...">
+                <img src="https://source.unsplash.com/1200x647/?shopping" class="d-block w-100" style="object-fit: cover; width: 100%; height: 100%;" alt="...">
                 <div class="carousel-caption d-none d-md-block bg-light p-4 rounded">
                     <h5 style="color: black;">Welcome to Daily Harbour, your one-stop destination for all your daily needs! </h5>
                     <p style="color: black;">Explore our wide range of fresh fruits, vegetables, essential electronics, all delivered right to your doorstep</p>
