--- a/templates/products.html
+++ b/templates/products.html
@@ -1,4 +1,9 @@
 {% extends 'base.html' %} {% block title %} Home {% endblock %} {% block body %}
+<style>
+    body {
+        background-color: #b2babb;
+    }
+</style>
 <!-- using fluid, the spaces are adjusted automatically -->
 <!-- my-4 is margin on y-axis -->
 <!-- px-0 is padding on x-axis -->
@@ -181,7 +186,7 @@
                     width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
                     aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" />
                 <div class="card-body">
-                    <p class="card-text">Chanel</p>
+                    <p class="card-text">Perfume</p>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-secondary unitsBtn">
