--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Checkout</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -417,7 +417,18 @@
     <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+    <script>
+        // Function to redirect the user after 2 minutes
+        function redirectUser() {
+            alert("Please complete the purchase in the given time limit!");
+            window.location.href = "/homepage"; // Change this URL to your desired endpoint
+        }
+
+        // Start the timer when the document is loaded
+        window.onload = function () {
+            setTimeout(redirectUser, 60 * 1000); // 1 minute in milliseconds: timeout limit
+        };
+    </script>
 </body>
-
-
 </html>
